--- a/CSS/tumblr.css
+++ b/CSS/tumblr.css
@@ -1,3 +1,8 @@
+body > iframe {
+    z-index: 0;
+    display: none;
+}
+
 .lines > li > ul{
     margin: 0 !important;
 }
@@ -20,19 +25,11 @@
     display: none;
 }
 
-/*.postdate {
+.postdate {
     size: 10px;
     color: #a2a2a2 !important;
     font-size: 10px !important;
     margin-top: -30px !important;
-}
-*/
-
-.postdate {
-    size: 10px;
-    color: #a2a2a2;
-    font-size: 10px;
-    margin-top: -30px;
 }
 
 .blogpost-container {
